--- a/Exercises/index.html
+++ b/Exercises/index.html
@@ -8,7 +8,7 @@
 <body>
     <main><p>THIS IS MY MAIN CODE</p>
     <figure>
-        <img src = "Moon.png"
+        <img src = "moon.png"
              width ="100" height="50"
              alt = "Crescent Moon">
         <figcaption>Set image size</figcaption>
