--- a/Exercises/index.html
+++ b/Exercises/index.html
@@ -9,8 +9,8 @@
     <main><p>THIS IS MY MAIN CODE</p>
     <figure>
         <img src = "moon.png"
-             width ="100" height="50"
-             alt = "Crescent Moon">
+             width ="200" height="100"
+             alt = "scribbled yellow crescent moon">
         <figcaption>Set image size</figcaption>
     </figure>
     <figure>
