--- a/Exercises/index.html
+++ b/Exercises/index.html
@@ -9,7 +9,7 @@
     <main><p>THIS IS MY MAIN CODE</p>
     <figure>
         <img src = "moon.png"
-             width ="200" height="100"
+             width = "50%"
              alt = "scribbled yellow crescent moon">
         <figcaption>Set image size</figcaption>
     </figure>
