--- a/Exercises/index.html
+++ b/Exercises/index.html
@@ -8,7 +8,7 @@
 <body>
     <main><p>THIS IS MY MAIN CODE</p>
     <figure>
-        <img src = "moon.png"
+        <img src = "Moon.png"
              width = "50%"
              alt = "scribbled yellow crescent moon">
         <figcaption>Set image size</figcaption>
