--- a/Exercises/index.html
+++ b/Exercises/index.html
@@ -9,8 +9,7 @@
     <main><p>THIS IS MY MAIN CODE</p>
     <figure>
         <img src = "Moon.png"
-             width = "50%"
-             alt = "scribbled yellow crescent moon">
+             width ="50%" alt = "scribbled yellow crescent moon">
         <figcaption>Set image size</figcaption>
     </figure>
     <figure>
